<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLayout.Activity_login">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="350dp"
            android:layout_height="150dp"
            android:background="@drawable/view_border_top"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_login"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_below="@id/welcomeText"
            android:layout_marginStart="20dp"/>




    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="579dp"
        android:layout_marginBottom="160dp"
        android:orientation="vertical"
        android:padding="20dp">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userName_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:layout_marginBottom="5dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userName_login1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:layout_marginBottom="5dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_login1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp">
            <Switch
                android:id="@+id/rememberMeSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/remember_me"
                tools:ignore="TouchTargetSizeCheck, UseSwitchCompatOrMaterialXml" />

            <TextView
                android:id="@+id/forgotPasswordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/forgot_password"

                android:textColor="@color/colorPrimary" />
        </RelativeLayout>


        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/dont_have_an_account" />

            <TextView
                android:id="@+id/signUpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <View
                android:layout_width="120dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="10dp"
                />
            <View
                android:layout_width="120dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray" />


        </LinearLayout>



        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:gravity="center|top"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/facebookLoginButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:background="@null"
                android:contentDescription="@string/facebook_login_button_description"
                android:src="@drawable/facebook_icon" />

            <ImageButton
                android:id="@+id/googleSignInButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@null"
                android:contentDescription="@string/google_login_button_description"
                android:src="@drawable/google_icon" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>