<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="38dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/tableRow2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/name"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/textname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="match_parent"
            android:paddingHorizontal="10dp">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/address"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/textaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingHorizontal="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/phone"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/textphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/itembuys1"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_height="match_parent"
            android:padding="16sp"
            />

        <TableRow
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:layout_marginStart="6dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="Phuong thuc van chuyen" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:textAlignment="textEnd"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_marginStart="6dp"
                android:textStyle="bold"
                android:text="Phi van chuyen" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="textEnd"
                android:paddingHorizontal="10dp"
                android:textColor="#FF0000"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_marginStart="6dp"
                android:layout_height="wrap_content"
                android:text="Giam gia"
                />

            <TextView
                android:id="@+id/textdiscount"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:paddingHorizontal="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#FF0000"
                android:layout_height="wrap_content"
                android:text="155.000d" />
        </TableRow>

    </LinearLayout>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="6dp"
                    android:text="Tong so tien:"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView11"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="7dp"
                    android:text="152.00d"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="#FF0026"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </TableRow>

        <Button
            android:id="@+id/button"
            android:layout_width="150dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="thanh toan" />

    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>